k8s/librespeed/holo/librespeed-holo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed
  namespace: librespeed
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: holo-speed.morrislan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librespeed
            port:
              number: 80
  tls:
  - hosts:
    - holo-speed.morrislan.net
    secretName: librespeed-tls
